minor layout discount fix on mobile

--- a/styles/base/_globals.scss
+++ b/styles/base/_globals.scss
@@ -718,6 +718,7 @@ h2 {
   .price {
     font-size: 20px;
     color: #000;
+    margin-top: 28px;
     margin-bottom: 17px;
   }
   .simple-price {
